--- a/index.html
+++ b/index.html
@@ -1,9 +1,22 @@
 <!doctype html>
 <html>
 	<head>
-	
+		<meta content="text/css; charset="utf-8">
+		<title>040518</title>
+		<style type="text/css">
+		div {
+		padding-left: 20px;
+		margin: 0;
+		width: 300px;
+		background: green;
+		text-align: center;
+		display: flex;
+		}
+		</style>
 	</head>
 	<body>
-	<p>Page 4 HW</p>
+		<div>
+			<p>Page 4 HW</p>
+		</div>
 	</body>
 </html>
