--- a/070518/index.html
+++ b/070518/index.html
@@ -5,7 +5,7 @@
 	<link rel="stylesheet" style="text/css" href="./styles.css">
 	<meta charset="utf-8">
 </head>
-<body>
+<body>   
 	<div class="main">
 		<header>	
 			<div class="right_header">
@@ -23,6 +23,9 @@
 			</div>
 		</header>
 		<div class="for_image">
+			<div class="image_element">
+				V
+			</div>
 			<img src="banner.jpg" alt="" width="100%">
 		</div>
 		<div class="site_content">
