--- a/090518/index.html
+++ b/090518/index.html
@@ -9,7 +9,7 @@
 <body>
 	<div class="tile">
 		<div class="name_tile">
-			<p>Something interesting and other</p>
+			<p>Something interesting</p>
 		</div>
 		<div class="text_tile">
 			<p>Давно выяснено, что при оценке дизайна и композиции
@@ -20,16 +20,85 @@
 			<h1>Buy!</h1>
 		</div>
 		<div class="price_tile">
+			<p>Low Price</p>
 		</div>
 	</div>
 	<div class="tile">
-	</div>
-	<div class="tile">
-	</div>
-	<div class="tile">
-	</div>
-	<div class="tile">
-	</div>
-	<div class="tile">
+		<div class="name_tile">
+			<p>Cool gift</p>
+		</div>
+		<div class="text_tile">
+			<p>Давно выяснено, что при оценке дизайна и композиции
+			читаемый текст мешает сосредоточиться. Lorem Ipsum используют потому, 
+			что тот обеспечивает более </p>
+		</div>
+		<div class="buy_tile">
+			<h1>Buy!</h1>
+		</div>
+		<div class="price_tile">
+			<p>High Price</p>
+		</div>
+	</div><div class="tile">
+		<div class="name_tile">
+			<p>Great goods</p>
+		</div>
+		<div class="text_tile">
+			<p>Давно выяснено, что при оценке дизайна и композиции
+			читаемый текст мешает сосредоточиться. Lorem Ipsum используют потому, 
+			что тот обеспечивает более или менее стандартное заполнение шаблона,
+			авно выяснено, что при оценке дизайна и композиции</p>
+		</div>
+		<div class="buy_tile">
+			<h1>Buy!</h1>
+		</div>
+		<div class="price_tile">
+			<p>Good Price</p>
+		</div>
+	</div><div class="tile">
+		<div class="name_tile">
+			<p>Bomb!</p>
+		</div>
+		<div class="text_tile">
+			<p>Давно выяснено, что при оценке дизайна и композиции
+			читаемый текст мешает сосредоточиться. Lorem Ipsum используют потому, 
+			что тот обеспечивает более или менее стандартное заполнение шаблона,
+			авно выяснено, что при оценке дизайна и композицииавно выяснено</p>
+		</div>
+		<div class="buy_tile">
+			<h1>Buy!</h1>
+		</div>
+		<div class="price_tile">
+			<p>Incredible Price</p>
+		</div>
+	</div><div class="tile">
+		<div class="name_tile">
+			<p>Incredible thing only for you</p>
+		</div>
+		<div class="text_tile">
+			<p>Давно выяснено, что при оценке дизайна и композиции
+			читаемый текст мешает сосредоточиться. Lorem Ipsum используют потому, 
+			что тот обеспечивает более или менее стандартное заполнение шаблона,</p>
+		</div>
+		<div class="buy_tile">
+			<h1>Buy!</h1>
+		</div>
+		<div class="price_tile">
+			<p>Low Price</p>
+		</div>
+	</div><div class="tile">
+		<div class="name_tile">
+			<p>All you need</p>
+		</div>
+		<div class="text_tile">
+			<p>Давно выяснено, что при оценке дизайна и композиции
+			читаемый текст мешает сосредоточиться. Lorem Ipsum используют потому, 
+			что тот обеспечивает более или менее стандартное заполнение шаблона,</p>
+		</div>
+		<div class="buy_tile">
+			<h1>Buy!</h1>
+		</div>
+		<div class="price_tile">
+			<p>Best Price</p>
+		</div>
 	</div>
 </body>
