--- a/110518/index.html
+++ b/110518/index.html
@@ -113,6 +113,9 @@
 				<div class="other_field">
 				</div>
 			</div>
+			<div class="main_field">
+				<p><input type="submit" name="submit" value="SUBMIT"></p>
+			</div>
 		</div>
 	</form>
 </body>
