--- a/140518/index.html
+++ b/140518/index.html
@@ -8,7 +8,15 @@
 </head>
 <body>
 	<header>
-		<div >
+		<div class="logo_container">
+			<div class="logo_name_and_image">
+				
+			</div>
+		</div>
+		<div class="bookmarks">
+			<div class="bookmarks_element">
+			</div>
+		</div>
 	</header>
 </body>
 </html>
