add back_images for cards

--- a/140518/index.html
+++ b/140518/index.html
@@ -7,16 +7,37 @@
 	<link rel="stylesheet" type="text/css" href="./styles.css">
 </head>
 <body>
-	<header>
-		<div class="logo_container">
-			<div class="logo_name_and_image">
-				
+	<div class="main_box" >
+		<header>
+			<div class="logo_container">
+				<div class="logo_name_and_image">
+					<img src="logo_name&image.png">
+				</div>
 			</div>
-		</div>
-		<div class="bookmarks">
-			<div class="bookmarks_element">
+			<div class="bookmarks">
+				<div class="bookmarks_element">
+					<p>о центре</p>
+				</div>
+				<div class="bookmarks_element">
+					<p>карты и расписание</p>
+				</div>
+				<div class="bookmarks_element">
+					<p>тренеры</p>
+				</div>
+				<div class="bookmarks_element">
+					<p>галерея</p>
+				</div>
+				<div class="bookmarks_element">
+					<p>новости</p>
+				</div>
+				<div class="bookmarks_element">
+					<p>контакты</p>
+				</div>
 			</div>
+		</header>
+		<div class="name_abonements">
+			<p>название группы карточек</p>
 		</div>
-	</header>
+	</div>	
 </body>
 </html>
