--- a/140518/index.html
+++ b/140518/index.html
@@ -38,6 +38,61 @@
 		<div class="name_abonements">
 			<p>название группы карточек</p>
 		</div>
+		<div class="abonements">
+			<div class="abonements_big_elements">
+				<div class="abonements_big_card">
+					<div class="abonements_big_card_name">
+						<p>СИНЯЯ КАРТА</p>
+					</div>
+					<div class="abonements_big_card_text">
+						<p><h1>Детский<br> МЕГА+</h1></p>
+						<p>Возможность 
+					</div>
+					<div class="abonements_big_card_buy">
+						<p>КУПИТЬ</p>
+					</div>
+					<div class="abonements_big_card_price">
+						<p>4.000₴</p>
+					</div>
+				</div>
+				<div class="abonements_big_card">
+					<div class="abonements_big_card_name">
+						<p>Лиловая карта</p>
+					</div>
+					<div class="abonements_big_card_text">
+						<p><h1>Базовый СПОРТ</h1></p>
+					</div>
+					<div class="abonements_big_card_buy">
+						<p>КУПИТЬ</p>
+					</div>
+					<div class="abonements_big_card_price">
+						</p>4.000₴</p>
+					</div>
+				</div>
+			</div>
+			<div class="abonements_small_elements">
+				<div class="abonements_small_card">
+					<div class="abonements_small_card_name">
+					</div>
+					<div class="abonements_small_card_text">
+					</div>
+					<div class="abonements_small_card_buy">
+					</div>
+					<div class="abonements_small_card_price">
+					</div>
+				</div>
+				<div class="abonements_small_card">
+					<div class="abonements_small_card_name">
+					</div>
+					<div class="abonements_small_card_text">
+					</div>
+					<div class="abonements_small_card_buy">
+					</div>
+					<div class="abonements_small_card_price">
+					</div>
+				</div>
+			</div>
+		</div>
 	</div>	
 </body>
 </html>
