--- a/290618/index.html
+++ b/290618/index.html
@@ -9,17 +9,17 @@
 <body>
     <div class="main">
         <div class="active">
-            <img src="./default.png">
+            <img src="./default.png" class="active_js">
         </div>
         <div class="list">
             <div class="list_element" >
-                <img src="./first.png">
+                <img src="./first.png" class="list_element_js">
             </div>
             <div class="list_element">
-                <img src="./second.png">    
+                <img src="./second.png" class="list_element_js">    
             </div>
             <div class="list_element">
-                <img src="./third.png">
+                <img src="./third.png" class="list_element_js">
             </div>
         </div>
     </div>
